--- a/public/styles.css
+++ b/public/styles.css
@@ -536,10 +536,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.fixed{
-  position: fixed;
-}
-
 .absolute{
   position: absolute;
 }
@@ -580,6 +576,110 @@ video {
   top: -50px;
 }
 
+.top-\[100px\]{
+  top: 100px;
+}
+
+.left-\[500px\]{
+  left: 500px;
+}
+
+.left-\[300px\]{
+  left: 300px;
+}
+
+.left-\[350px\]{
+  left: 350px;
+}
+
+.top-\[200px\]{
+  top: 200px;
+}
+
+.bottom-\[200px\]{
+  bottom: 200px;
+}
+
+.bottom-\[100px\]{
+  bottom: 100px;
+}
+
+.left-\[330px\]{
+  left: 330px;
+}
+
+.bottom-\[120px\]{
+  bottom: 120px;
+}
+
+.bottom-\[150px\]{
+  bottom: 150px;
+}
+
+.bottom-\[180px\]{
+  bottom: 180px;
+}
+
+.right-\[100\%\]{
+  right: 100%;
+}
+
+.right-\[100px\]{
+  right: 100px;
+}
+
+.right-\[200px\]{
+  right: 200px;
+}
+
+.right-\[500px\]{
+  right: 500px;
+}
+
+.right-\[400px\]{
+  right: 400px;
+}
+
+.right-\[450px\]{
+  right: 450px;
+}
+
+.top-full{
+  top: 100%;
+}
+
+.right-\[420px\]{
+  right: 420px;
+}
+
+.left-\[380px\]{
+  left: 380px;
+}
+
+.left-\[4000px\]{
+  left: 4000px;
+}
+
+.left-\[400px\]{
+  left: 400px;
+}
+
+.right-\[350px\]{
+  right: 350px;
+}
+
+.right-\[330px\]{
+  right: 330px;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.z-0{
+  z-index: 0;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -600,6 +700,10 @@ video {
   margin: 0px;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -610,6 +714,10 @@ video {
 
 .mb-super{
   margin-bottom: 60rem;
+}
+
+.ml-auto{
+  margin-left: auto;
 }
 
 .mr-1{
@@ -632,20 +740,8 @@ video {
   margin-top: 1.5rem;
 }
 
-.ml-auto{
-  margin-left: auto;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
 .inline-block{
   display: inline-block;
-}
-
-.inline{
-  display: inline;
 }
 
 .flex{
@@ -654,10 +750,6 @@ video {
 
 .grid{
   display: grid;
-}
-
-.h-10{
-  height: 2.5rem;
 }
 
 .h-\[100px\]{
@@ -680,16 +772,8 @@ video {
   height: 500px;
 }
 
-.h-\[1000px\]{
-  height: 1000px;
-}
-
-.h-\[800px\]{
-  height: 800px;
-}
-
-.h-\[700px\]{
-  height: 700px;
+.h-\[600px\]{
+  height: 600px;
 }
 
 .h-\[900px\]{
@@ -700,24 +784,12 @@ video {
   height: 100%;
 }
 
-.h-\[474\.250px\]{
-  height: 474.250px;
+.w-24{
+  width: 6rem;
 }
 
-.h-\[711\.375px\]{
-  height: 711.375px;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[550px\]{
-  height: 550px;
-}
-
-.w-10{
-  width: 2.5rem;
+.w-64{
+  width: 16rem;
 }
 
 .w-7{
@@ -736,6 +808,10 @@ video {
   width: 150px;
 }
 
+.w-\[25\%\]{
+  width: 25%;
+}
+
 .w-\[250px\]{
   width: 250px;
 }
@@ -748,24 +824,8 @@ video {
   width: 350px;
 }
 
-.w-full{
-  width: 100%;
-}
-
-.w-20{
-  width: 5rem;
-}
-
-.w-80{
-  width: 20rem;
-}
-
-.w-64{
-  width: 16rem;
-}
-
-.w-96{
-  width: 24rem;
+.w-\[400px\]{
+  width: 400px;
 }
 
 .w-\[500px\]{
@@ -776,50 +836,20 @@ video {
   width: 800px;
 }
 
-.w-\[900px\]{
-  width: 900px;
+.w-full{
+  width: 100%;
 }
 
-.w-\[1900\]{
-  width: 1900;
+.w-\[410px\]{
+  width: 410px;
 }
 
-.w-\[1900px\]{
-  width: 1900px;
+.w-\[420px\]{
+  width: 420px;
 }
 
-.w-5{
-  width: 1.25rem;
-}
-
-.w-44{
-  width: 11rem;
-}
-
-.w-52{
-  width: 13rem;
-}
-
-.w-16{
-  width: 4rem;
-}
-
-.w-24{
-  width: 6rem;
-}
-
-.w-\[400px\]{
-  width: 400px;
-}
-
-.w-\[25\%\]{
-  width: 25%;
-}
-
-.scale-75{
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.w-\[450px\]{
+  width: 450px;
 }
 
 .grid-cols-1{
@@ -838,10 +868,6 @@ video {
   align-items: center;
 }
 
-.justify-end{
-  justify-content: flex-end;
-}
-
 .justify-center{
   justify-content: center;
 }
@@ -858,12 +884,20 @@ video {
   row-gap: 1rem;
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
+
 .overflow-x-hidden{
   overflow-x: hidden;
 }
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.border{
+  border-width: 1px;
 }
 
 .border-2{
@@ -874,9 +908,31 @@ video {
   border-width: 4px;
 }
 
+.border-\[20px\]{
+  border-width: 20px;
+}
+
+.border-\[10px\]{
+  border-width: 10px;
+}
+
+.border-\[15px\]{
+  border-width: 15px;
+}
+
 .border-\[\#b1c08b\]{
   --tw-border-opacity: 1;
   border-color: rgb(177 192 139 / var(--tw-border-opacity));
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-red-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -894,6 +950,11 @@ video {
   background-color: rgb(217 217 217 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-gray-950{
   --tw-bg-opacity: 1;
   background-color: rgb(3 7 18 / var(--tw-bg-opacity));
@@ -904,14 +965,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-200{
+.bg-black{
   --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-red-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-25{
@@ -930,44 +986,21 @@ video {
   background-size: cover;
 }
 
-.bg-contain{
-  background-size: contain;
+.bg-center{
+  background-position: center;
 }
 
 .bg-right-bottom{
   background-position: right bottom;
 }
 
-.bg-bottom{
-  background-position: bottom;
-}
-
-.bg-center{
-  background-position: center;
-}
-
 .bg-no-repeat{
   background-repeat: no-repeat;
-}
-
-.object-contain{
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.object-fill{
-  -o-object-fit: fill;
-     object-fit: fill;
-}
-
-.object-scale-down{
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
 }
 
 .object-bottom{
@@ -979,12 +1012,12 @@ video {
   padding: 0px;
 }
 
-.p-5{
-  padding: 1.25rem;
+.p-40{
+  padding: 10rem;
 }
 
-.p-10{
-  padding: 2.5rem;
+.p-20{
+  padding: 5rem;
 }
 
 .px-10{
@@ -997,6 +1030,16 @@ video {
   padding-right: 4rem;
 }
 
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-56{
+  padding-left: 14rem;
+  padding-right: 14rem;
+}
+
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1007,9 +1050,29 @@ video {
   padding-bottom: 3rem;
 }
 
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-40{
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 .py-5{
@@ -1027,14 +1090,14 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
-.px-96{
-  padding-left: 24rem;
-  padding-right: 24rem;
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-20{
@@ -1042,53 +1105,21 @@ video {
   padding-right: 5rem;
 }
 
-.px-56{
-  padding-left: 14rem;
-  padding-right: 14rem;
-}
-
-.py-56{
-  padding-top: 14rem;
-  padding-bottom: 14rem;
-}
-
-.py-96{
-  padding-top: 24rem;
-  padding-bottom: 24rem;
-}
-
-.py-40{
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-}
-
-.py-14{
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+.py-32{
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
 
 .pr-10{
   padding-right: 2.5rem;
 }
 
-.pl-96{
-  padding-left: 24rem;
-}
-
-.pr-20{
-  padding-right: 5rem;
-}
-
-.pr-40{
-  padding-right: 10rem;
-}
-
-.pr-96{
-  padding-right: 24rem;
-}
-
 .text-center{
   text-align: center;
+}
+
+.text-start{
+  text-align: start;
 }
 
 .font-Montserrat{
@@ -1108,11 +1139,6 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-bold{
@@ -1140,35 +1166,25 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-gray-100{
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1182,6 +1198,10 @@ video {
 
 .duration-200{
   transition-duration: 200ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .duration-500{
@@ -1198,9 +1218,24 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:cursor-pointer:hover{
+  cursor: pointer;
+}
+
 .hover\:bg-\[\#b1c08b\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(177 192 139 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-black:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-white:hover{
@@ -1220,6 +1255,18 @@ video {
 
 .hover\:opacity-80:hover{
   opacity: 0.8;
+}
+
+.hover\:shadow-inner:hover{
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-lg:hover{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 @media (min-width: 768px){
