--- a/public/styles.css
+++ b/public/styles.css
@@ -536,6 +536,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -552,8 +556,20 @@ video {
   bottom: 16rem;
 }
 
+.bottom-\[200px\]{
+  bottom: 200px;
+}
+
+.left-0{
+  left: 0px;
+}
+
 .left-36{
   left: 9rem;
+}
+
+.left-\[400px\]{
+  left: 400px;
 }
 
 .right-2{
@@ -562,6 +578,10 @@ video {
 
 .right-36{
   right: 9rem;
+}
+
+.right-\[330px\]{
+  right: 330px;
 }
 
 .top-0{
@@ -580,112 +600,20 @@ video {
   top: 100px;
 }
 
-.left-\[500px\]{
-  left: 500px;
-}
-
-.left-\[300px\]{
-  left: 300px;
-}
-
-.left-\[350px\]{
-  left: 350px;
-}
-
-.top-\[200px\]{
-  top: 200px;
-}
-
-.bottom-\[200px\]{
-  bottom: 200px;
-}
-
-.bottom-\[100px\]{
-  bottom: 100px;
-}
-
-.left-\[330px\]{
-  left: 330px;
-}
-
-.bottom-\[120px\]{
-  bottom: 120px;
-}
-
-.bottom-\[150px\]{
-  bottom: 150px;
-}
-
-.bottom-\[180px\]{
-  bottom: 180px;
-}
-
-.right-\[100\%\]{
-  right: 100%;
-}
-
-.right-\[100px\]{
-  right: 100px;
-}
-
-.right-\[200px\]{
-  right: 200px;
-}
-
-.right-\[500px\]{
-  right: 500px;
-}
-
-.right-\[400px\]{
-  right: 400px;
-}
-
-.right-\[450px\]{
-  right: 450px;
-}
-
-.top-full{
-  top: 100%;
-}
-
-.right-\[420px\]{
-  right: 420px;
-}
-
-.left-\[380px\]{
-  left: 380px;
-}
-
-.left-\[4000px\]{
-  left: 4000px;
-}
-
-.left-\[400px\]{
-  left: 400px;
-}
-
-.right-\[350px\]{
-  right: 350px;
-}
-
-.right-\[330px\]{
-  right: 330px;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.z-0{
-  z-index: 0;
-}
-
 .z-10{
   z-index: 10;
 }
 
 .z-20{
   z-index: 20;
+}
+
+.-z-50{
+  z-index: -50;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .col-span-2{
@@ -772,6 +700,10 @@ video {
   height: 500px;
 }
 
+.h-\[5500px\]{
+  height: 5500px;
+}
+
 .h-\[600px\]{
   height: 600px;
 }
@@ -782,6 +714,10 @@ video {
 
 .h-full{
   height: 100%;
+}
+
+.h-\[550px\]{
+  height: 550px;
 }
 
 .w-24{
@@ -800,8 +736,8 @@ video {
   width: 2rem;
 }
 
-.w-\[100vw\]{
-  width: 100vw;
+.w-\[100\%\]{
+  width: 100%;
 }
 
 .w-\[150px\]{
@@ -824,8 +760,8 @@ video {
   width: 350px;
 }
 
-.w-\[400px\]{
-  width: 400px;
+.w-\[450px\]{
+  width: 450px;
 }
 
 .w-\[500px\]{
@@ -838,18 +774,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-\[410px\]{
-  width: 410px;
-}
-
-.w-\[420px\]{
-  width: 420px;
-}
-
-.w-\[450px\]{
-  width: 450px;
 }
 
 .grid-cols-1{
@@ -908,14 +832,6 @@ video {
   border-width: 4px;
 }
 
-.border-\[20px\]{
-  border-width: 20px;
-}
-
-.border-\[10px\]{
-  border-width: 10px;
-}
-
 .border-\[15px\]{
   border-width: 15px;
 }
@@ -928,11 +844,6 @@ video {
 .border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-red-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(185 28 28 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -963,11 +874,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-25{
@@ -1016,10 +922,6 @@ video {
   padding: 10rem;
 }
 
-.p-20{
-  padding: 5rem;
-}
-
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1028,6 +930,11 @@ video {
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
+}
+
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .px-4{
@@ -1060,14 +967,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-32{
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
 
 .py-40{
@@ -1090,24 +997,9 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-20{
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-
-.py-32{
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+.py-16{
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .pr-10{
@@ -1218,14 +1110,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:scale-105:hover{
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:cursor-pointer:hover{
   cursor: pointer;
+}
+
+.hover\:bg-\[\#000\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#b1c08b\]:hover{
@@ -1243,6 +1134,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-opacity-40:hover{
+  --tw-bg-opacity: 0.4;
+}
+
 .hover\:text-black:hover{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1255,24 +1150,6 @@ video {
 
 .hover\:opacity-80:hover{
   opacity: 0.8;
-}
-
-.hover\:shadow-inner:hover{
-  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-lg:hover{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-@media (min-width: 768px){
-  .md\:fixed{
-    position: fixed;
-  }
 }
 
 @media (min-width: 1024px){
@@ -1384,6 +1261,14 @@ video {
     height: 850px;
   }
 
+  .lg\:h-\[880px\]{
+    height: 880px;
+  }
+
+  .lg\:h-\[900px\]{
+    height: 900px;
+  }
+
   .lg\:w-10{
     width: 2.5rem;
   }
@@ -1477,6 +1362,21 @@ video {
   .lg\:py-8{
     padding-top: 2rem;
     padding-bottom: 2rem;
+  }
+
+  .lg\:py-10{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .lg\:py-6{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .lg\:py-52{
+    padding-top: 13rem;
+    padding-bottom: 13rem;
   }
 
   .lg\:pb-40{
