--- a/public/styles.css
+++ b/public/styles.css
@@ -560,16 +560,16 @@ video {
   bottom: 200px;
 }
 
+.bottom-\[500px\]{
+  bottom: 500px;
+}
+
 .left-0{
   left: 0px;
 }
 
 .left-36{
   left: 9rem;
-}
-
-.left-\[400px\]{
-  left: 400px;
 }
 
 .right-2{
@@ -580,8 +580,12 @@ video {
   right: 9rem;
 }
 
-.right-\[330px\]{
-  right: 330px;
+.right-5{
+  right: 1.25rem;
+}
+
+.right-\[-256\]{
+  right: -256;
 }
 
 .top-0{
@@ -592,12 +596,24 @@ video {
   top: 9rem;
 }
 
+.top-5{
+  top: 1.25rem;
+}
+
 .top-\[-50px\]{
   top: -50px;
 }
 
 .top-\[100px\]{
   top: 100px;
+}
+
+.top-\[\]{
+  top: ;
+}
+
+.z-0{
+  z-index: 0;
 }
 
 .z-10{
@@ -612,6 +628,10 @@ video {
   z-index: 50;
 }
 
+.z-\[9999\]{
+  z-index: 9999;
+}
+
 .col-span-2{
   grid-column: span 2 / span 2;
 }
@@ -622,6 +642,24 @@ video {
 
 .m-0{
   margin: 0px;
+}
+
+.m-4{
+  margin: 1rem;
+}
+
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
 }
 
 .mb-10{
@@ -636,10 +674,6 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mb-super{
-  margin-bottom: 60rem;
-}
-
 .ml-auto{
   margin-left: auto;
 }
@@ -648,8 +682,16 @@ video {
   margin-right: 0.25rem;
 }
 
+.mr-auto{
+  margin-right: auto;
+}
+
 .mt-10{
   margin-top: 2.5rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .mt-3{
@@ -664,6 +706,14 @@ video {
   margin-top: 1.5rem;
 }
 
+.mt-\[-150px\]{
+  margin-top: -150px;
+}
+
+.block{
+  display: block;
+}
+
 .inline-block{
   display: inline-block;
 }
@@ -672,12 +722,20 @@ video {
   display: flex;
 }
 
+.table{
+  display: table;
+}
+
 .grid{
   display: grid;
 }
 
 .h-\[100px\]{
   height: 100px;
+}
+
+.h-\[1400px\]{
+  height: 1400px;
 }
 
 .h-\[150px\]{
@@ -696,36 +754,56 @@ video {
   height: 500px;
 }
 
-.h-\[600px\]{
-  height: 600px;
-}
-
-.h-\[900px\]{
-  height: 900px;
+.h-\[800px\]{
+  height: 800px;
 }
 
 .h-full{
   height: 100%;
 }
 
+.w-11{
+  width: 2.75rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
 .w-24{
   width: 6rem;
 }
 
-.w-64{
-  width: 16rem;
+.w-5{
+  width: 1.25rem;
 }
 
-.w-7{
-  width: 1.75rem;
+.w-\[100px\]{
+  width: 100px;
 }
 
-.w-8{
-  width: 2rem;
+.w-\[100vw\]{
+  width: 100vw;
 }
 
 .w-\[150px\]{
   width: 150px;
+}
+
+.w-\[170px\]{
+  width: 170px;
+}
+
+.w-\[20px\]{
+  width: 20px;
+}
+
+.w-\[22px\]{
+  width: 22px;
+}
+
+.w-\[23px\]{
+  width: 23px;
 }
 
 .w-\[25\%\]{
@@ -744,20 +822,24 @@ video {
   width: 350px;
 }
 
+.w-\[413px\]{
+  width: 413px;
+}
+
 .w-\[450px\]{
   width: 450px;
 }
 
-.w-\[500px\]{
-  width: 500px;
-}
-
-.w-\[800px\]{
-  width: 800px;
+.w-\[900px\]{
+  width: 900px;
 }
 
 .w-full{
   width: 100%;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .grid-cols-1{
@@ -766,6 +848,10 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .items-start{
@@ -788,8 +874,21 @@ video {
   gap: 1rem;
 }
 
+.gap-x-1{
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
 .gap-y-4{
   row-gap: 1rem;
+}
+
+.gap-y-5{
+  row-gap: 1.25rem;
 }
 
 .overflow-hidden{
@@ -820,6 +919,14 @@ video {
   border-width: 15px;
 }
 
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
+.border-none{
+  border-style: none;
+}
+
 .border-\[\#b1c08b\]{
   --tw-border-opacity: 1;
   border-color: rgb(177 192 139 / var(--tw-border-opacity));
@@ -833,6 +940,16 @@ video {
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-\[\#333333\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#657343\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 115 67 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#b1c08b\]{
@@ -876,8 +993,8 @@ video {
   background-size: cover;
 }
 
-.bg-center{
-  background-position: center;
+.bg-left{
+  background-position: left;
 }
 
 .bg-right-bottom{
@@ -898,12 +1015,25 @@ video {
      object-position: bottom;
 }
 
+.object-right{
+  -o-object-position: right;
+     object-position: right;
+}
+
 .p-0{
   padding: 0px;
 }
 
-.p-40{
-  padding: 10rem;
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-12{
+  padding: 3rem;
+}
+
+.p-20{
+  padding: 5rem;
 }
 
 .px-10{
@@ -926,14 +1056,19 @@ video {
   padding-right: 1rem;
 }
 
-.px-56{
-  padding-left: 14rem;
-  padding-right: 14rem;
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-12{
@@ -951,6 +1086,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -961,9 +1101,9 @@ video {
   padding-bottom: 8rem;
 }
 
-.py-40{
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-5{
@@ -997,6 +1137,11 @@ video {
   font-family: Montserrat;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -1007,6 +1152,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1014,6 +1164,10 @@ video {
 
 .font-bold{
   font-weight: 700;
+}
+
+.font-extrabold{
+  font-weight: 800;
 }
 
 .font-light{
@@ -1047,6 +1201,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.opacity-0{
+  opacity: 0;
+}
+
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1065,6 +1229,10 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-1000{
+  transition-duration: 1000ms;
 }
 
 .duration-200{
@@ -1131,7 +1299,16 @@ video {
   opacity: 0.8;
 }
 
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 @media (min-width: 1024px){
+  .lg\:fixed{
+    position: fixed;
+  }
+
   .lg\:absolute{
     position: absolute;
   }
@@ -1140,12 +1317,16 @@ video {
     bottom: 4rem;
   }
 
-  .lg\:bottom-36{
-    bottom: 9rem;
-  }
-
   .lg\:bottom-44{
     bottom: 11rem;
+  }
+
+  .lg\:bottom-\[144px\]{
+    bottom: 144px;
+  }
+
+  .lg\:bottom-\[200px\]{
+    bottom: 200px;
   }
 
   .lg\:left-40{
@@ -1156,6 +1337,22 @@ video {
     left: 15rem;
   }
 
+  .lg\:left-\[150px\]{
+    left: 150px;
+  }
+
+  .lg\:left-\[350px\]{
+    left: 350px;
+  }
+
+  .lg\:left-\[400px\]{
+    left: 400px;
+  }
+
+  .lg\:left-\[900px\]{
+    left: 900px;
+  }
+
   .lg\:right-60{
     right: 15rem;
   }
@@ -1164,8 +1361,20 @@ video {
     right: 24rem;
   }
 
+  .lg\:right-\[330px\]{
+    right: 330px;
+  }
+
   .lg\:right-\[480px\]{
     right: 480px;
+  }
+
+  .lg\:right-\[900px\]{
+    right: 900px;
+  }
+
+  .lg\:top-0{
+    top: 0px;
   }
 
   .lg\:top-32{
@@ -1180,6 +1389,27 @@ video {
     top: 13rem;
   }
 
+  .lg\:top-\[100px\]{
+    top: 100px;
+  }
+
+  .lg\:top-\[250px\]{
+    top: 250px;
+  }
+
+  .lg\:top-\[45\%\]{
+    top: 45%;
+  }
+
+  .lg\:right-\[1200px\]{
+    right: 1200px;
+  }
+
+  .lg\:my-0{
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
   .lg\:mb-10{
     margin-bottom: 2.5rem;
   }
@@ -1188,12 +1418,24 @@ video {
     margin-bottom: 3rem;
   }
 
+  .lg\:mb-16{
+    margin-bottom: 4rem;
+  }
+
   .lg\:mb-5{
     margin-bottom: 1.25rem;
   }
 
   .lg\:mb-8{
     margin-bottom: 2rem;
+  }
+
+  .lg\:ml-auto{
+    margin-left: auto;
+  }
+
+  .lg\:mr-\[300px\]{
+    margin-right: 300px;
   }
 
   .lg\:mt-0{
@@ -1208,8 +1450,16 @@ video {
     margin-top: 2rem;
   }
 
+  .lg\:mt-\[150px\]{
+    margin-top: 150px;
+  }
+
   .lg\:block{
     display: block;
+  }
+
+  .lg\:h-60{
+    height: 15rem;
   }
 
   .lg\:h-\[250px\]{
@@ -1232,12 +1482,28 @@ video {
     height: 550px;
   }
 
+  .lg\:h-\[600px\]{
+    height: 600px;
+  }
+
   .lg\:h-\[650px\]{
     height: 650px;
   }
 
+  .lg\:h-\[700px\]{
+    height: 700px;
+  }
+
+  .lg\:h-\[800px\]{
+    height: 800px;
+  }
+
   .lg\:h-\[900px\]{
     height: 900px;
+  }
+
+  .lg\:h-full{
+    height: 100%;
   }
 
   .lg\:w-10{
@@ -1248,8 +1514,16 @@ video {
     width: 2.25rem;
   }
 
+  .lg\:w-\[225px\]{
+    width: 225px;
+  }
+
   .lg\:w-\[250px\]{
     width: 250px;
+  }
+
+  .lg\:w-\[270px\]{
+    width: 270px;
   }
 
   .lg\:w-\[350px\]{
@@ -1264,8 +1538,28 @@ video {
     width: 500px;
   }
 
+  .lg\:w-\[514px\]{
+    width: 514px;
+  }
+
+  .lg\:w-\[550px\]{
+    width: 550px;
+  }
+
+  .lg\:w-\[600px\]{
+    width: 600px;
+  }
+
   .lg\:w-\[700px\]{
     width: 700px;
+  }
+
+  .lg\:w-\[840px\]{
+    width: 840px;
+  }
+
+  .lg\:w-auto{
+    width: auto;
   }
 
   .lg\:grid-cols-2{
@@ -1276,8 +1570,33 @@ video {
     flex-direction: row;
   }
 
+  .lg\:flex-wrap{
+    flex-wrap: wrap;
+  }
+
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
   .lg\:justify-between{
     justify-content: space-between;
+  }
+
+  .lg\:bg-bottom{
+    background-position: bottom;
+  }
+
+  .lg\:bg-center{
+    background-position: center;
+  }
+
+  .lg\:p-40{
+    padding: 10rem;
+  }
+
+  .lg\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .lg\:px-16{
@@ -1285,9 +1604,24 @@ video {
     padding-right: 4rem;
   }
 
+  .lg\:px-20{
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .lg\:px-36{
+    padding-left: 9rem;
+    padding-right: 9rem;
+  }
+
   .lg\:px-40{
     padding-left: 10rem;
     padding-right: 10rem;
+  }
+
+  .lg\:px-56{
+    padding-left: 14rem;
+    padding-right: 14rem;
   }
 
   .lg\:px-64{
@@ -1305,6 +1639,16 @@ video {
     padding-right: 2rem;
   }
 
+  .lg\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:py-10{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
   .lg\:py-12{
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -1318,6 +1662,16 @@ video {
   .lg\:py-24{
     padding-top: 6rem;
     padding-bottom: 6rem;
+  }
+
+  .lg\:py-40{
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+
+  .lg\:py-5{
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
   }
 
   .lg\:py-52{
@@ -1339,6 +1693,10 @@ video {
     padding-bottom: 10rem;
   }
 
+  .lg\:pl-0{
+    padding-left: 0px;
+  }
+
   .lg\:pl-72{
     padding-left: 18rem;
   }
@@ -1347,8 +1705,12 @@ video {
     padding-right: 4rem;
   }
 
-  .lg\:pr-52{
-    padding-right: 13rem;
+  .lg\:pr-40{
+    padding-right: 10rem;
+  }
+
+  .lg\:pr-96{
+    padding-right: 24rem;
   }
 
   .lg\:pr-large{
