--- a/public/styles.css
+++ b/public/styles.css
@@ -1264,6 +1264,19 @@ video {
 }
 
 #preloader {
+  align-items: center;
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100000;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+}
+
+#preloader div {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -1271,7 +1284,7 @@ video {
   color: white;
 }
 
-#preloader span {
+#preloader div span {
   font-size: 80px;
   letter-spacing: 5px;
   text-transform: uppercase;
@@ -1279,7 +1292,7 @@ video {
   mix-blend-mode: difference;
 }
 
-#preloader::before {
+#preloader div::before {
   content: "";
   position: absolute;
   left: 0;
