--- a/src/styles.css
+++ b/src/styles.css
@@ -4,20 +4,33 @@
 @tailwind utilities;
 
 #preloader {
+  align-items: center;
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 100000;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+}
+
+#preloader div {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   color: white;
 }
-#preloader span {
+#preloader div span {
   font-size: 80px;
   letter-spacing: 5px;
   text-transform: uppercase;
   line-height: 1;
   mix-blend-mode: difference;
 }
-#preloader::before {
+#preloader div::before {
   content: "";
   position: absolute;
   left: 0;
