--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Montserrat";
+}
 
 #preloader {
   align-items: center;
@@ -48,4 +51,73 @@
   50% {
     left: calc(100% - 100px);
   }
+}
+
+.sticky {
+  transition: ease-in-out 0.5s;
+  padding-bottom: 0.75rem !important;
+  padding-top: 0.75rem !important;
+}
+
+.hamburger-menu-show {
+  transform: translateX(-256px);
+}
+
+.set-text-move-down {
+  opacity: 0;
+  transform: translateY(-150px);
+  transition: 0.75s ease-in-out;
+}
+.set-text-move-down.text-move-down {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.set-move-down {
+  opacity: 0;
+  transform: translateY(-400px);
+  transition: 0.75s ease-in-out;
+}
+.move-down {
+  opacity: 1;
+  transform: translateY(0);
+}
+.set-move-up {
+  opacity: 0;
+  transform: translateY(400px);
+  transition: 0.75s ease-in-out;
+}
+.move-up {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.set-move-to-left {
+  opacity: 0;
+  transform: translateX(500px);
+  transition: 0.75s ease-in-out;
+}
+.move-to-left {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.set-move-to-right {
+  opacity: 0;
+  transform: translateX(-500px);
+  transition: 0.75s ease-in-out;
+}
+.move-to-right {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.card:nth-of-type(1) {
+  transition-delay: 0.3s;
+}
+.card:nth-of-type(2) {
+  transition-delay: 0.6s;
+}
+.card:nth-of-type(3) {
+  transition-delay: 0.9s;
 }
