--- a/public/styles.css
+++ b/public/styles.css
@@ -1431,6 +1431,12 @@ video {
   outline-offset: 2px;
 }
 
+@media (min-width: 768px) {
+  .md\:pl-20 {
+    padding-left: 5rem;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:fixed {
     position: fixed;
@@ -1641,6 +1647,10 @@ video {
     width: 2.25rem;
   }
 
+  .lg\:w-\[1200px\] {
+    width: 1200px;
+  }
+
   .lg\:w-\[225px\] {
     width: 225px;
   }
@@ -1679,6 +1689,10 @@ video {
 
   .lg\:w-\[700px\] {
     width: 700px;
+  }
+
+  .lg\:w-\[800px\] {
+    width: 800px;
   }
 
   .lg\:w-\[840px\] {
@@ -1757,11 +1771,6 @@ video {
     padding-right: 16rem;
   }
 
-  .lg\:px-72 {
-    padding-left: 18rem;
-    padding-right: 18rem;
-  }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
@@ -1835,20 +1844,12 @@ video {
     padding-left: 0px;
   }
 
-  .lg\:pl-72 {
-    padding-left: 18rem;
-  }
-
   .lg\:pr-16 {
     padding-right: 4rem;
   }
 
   .lg\:pr-40 {
     padding-right: 10rem;
-  }
-
-  .lg\:pr-large {
-    padding-right: 50rem;
   }
 
   .lg\:pt-5 {
@@ -1882,5 +1883,16 @@ video {
 
   .lg\:leading-8 {
     line-height: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:px-72 {
+    padding-left: 18rem;
+    padding-right: 18rem;
+  }
+
+  .xl\:pl-72 {
+    padding-left: 18rem;
   }
 }
